fix weird scrollbar issue when modal is opened

--- a/includes/less/edd-wl.less
+++ b/includes/less/edd-wl.less
@@ -19,6 +19,9 @@
 	}
 }
 
+// required for themes which set overflow-y to be scroll (most standard WP themes)
+html { overflow-y: inherit; }
+
 // sharing
 .edd-wl-service { 
 	display: inline-block; margin: 0 1em 1em 0; 
