--- a/includes/less/modal.less
+++ b/includes/less/modal.less
@@ -2,6 +2,7 @@
 #edd-wl-modal {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
+  z-index: 10000; // twenty eleven's #branding div is set to 9999 so modal appears behind.
 
   h2 {
     color: #222;
@@ -97,6 +98,8 @@
 .fade.in {
   opacity: 1;
 }
+
+
 .collapse {
   display: none;
 }
